--- a/administrator/components/com_eqmonitor/language/en-GB/en-GB.com_eqmonitor.ini
+++ b/administrator/components/com_eqmonitor/language/en-GB/en-GB.com_eqmonitor.ini
@@ -4,3 +4,6 @@
 
 COM_EQMONITOR="eqmonitor"
 COM_EQMONITOR_CONFIGURATION="Eqmonitor Options"
+COM_EQMONITOR_WS_BASE_URL="Webservice Base URL"
+COM_EQMONITOR_OPTIONS="Options"
+COM_EQMONITOR_OPTIONS_DESC=""
